--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </nav>
     <nav id="newnav">
         <ul>
-            <a class="logo" href="/index.html"><img src="img/logo.JPG" alt=""></a>
+            <a class="logo" href="#slideshow"><img src="img/logo.JPG" alt=""></a>
             <a href="javascript:void(0)" onclick="openmenu()"><i class="fas fa-bars fa-2x h-menu"></i></a>
             <ul id="ham-nav">
                 <hr>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="#slideshow">Home</a></li>
                 <hr>
                 <li> <a href="#About">About</a></li>
                 <hr>
@@ -42,7 +42,7 @@
             </ul>
         </ul>
     </nav>
-    <div class="slideshow-container ">
+    <div class="slideshow-container " id="slideshow">
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade ">
@@ -190,7 +190,7 @@
     <footer>
         <div class="footer-1 ">
             <span class="copyright "> All copyrights &copy; are reserved | </span>
-            <span class="back "><a href="/index.html "> Back to top</a></span>
+            <span class="back "><a href="#slideshow "> Back to top</a></span>
         </div>
         <div class="links ">
             <span><a href="https://twitter.com/msdhoni?lang=en "  target="_blank "><img src="img/twitterlogo.ico " alt=" "></a></span>
