--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <nav id="navbar">
         <ul class="navigation">
-            <span><a href="/index.html"><img src="img/logo.JPG" alt=""></a></span>
-            <li><a href="/index.html">Home</a></li>
+            <span><a href="#slideshow"><img src="img/logo.JPG" alt=""></a></span>
+            <li><a href="#slideshow">Home</a></li>
             <li> <a href="#About">About</a></li>
             <li><a href="#quotes">Quotes</a></li>
             <li><a href="#Image-Block">Images</a></li>
